<resources>
    <string name="app_name">BigBasket</string>
    <string name="search">Search</string>
    <string name="searchHint">Search</string>
    <string name="pharma_msg">Please choose/upload pharma prescription or remove pharma products</string>
    <string name="age_validation_required">Age check or validation is required.</string>
    <string name="errorWhileSampling">Error while sampling, please try again!</string>
    <string name="product_id_invalid">Sorry, this product does not exists!</string>
    <string name="invalidBasketQty">You cannot add any more quantities for this product!</string>
    <string name="headingServerError">Server Error!</string>
    <string name="server_error">Oops an error occurred!\nPlease try again later!</string>
    <string name="login_required">Please login to continue!</string>
    <string name="voucherCode">eVoucher Code</string>
    <string name="potentialOrderIdExpired">Previous checkout process timed out. Please start again!</string>
    <string name="list_exists">You have already created a list with the same name!</string>
    <string name="INVALID_USER_PASS">Username or password is incorrect!</string>
    <string name="OLD_PASS_NOT_CORRECT">Old password is incorrect!</string>
    <string name="slotNotAvailable">The selected delivery slot is no longer available, please select a new slot!</string>
    <string name="REGISTERED_EMAIL">Already registered with us, please use a different email!</string>
    <string name="selectDateRange">Select a date range</string>
    <string name="multipleDeliverySlotMsg1">This order is fulfilled by more than one vendor and hence will be delivered separately.</string>
    <string name="deliverySlotHeading">DELIVERY SLOT</string>
    <string name="cartNotExistsError">Cart does not exist!</string>
    <string name="basketEmpty">Your Basket is empty!</string>
    <string name="alt_placeholder">BigBasket Image</string>
    <string name="invalid_promo">Sorry,this promotion is no longer active!</string>
    <string name="no_promo_cat">No promotions are currently active for this city!</string>
    <string name="free_promo_txt">On completing promo selection,
        following product will be automatically added to your order during checkout.</string>
    <string name="free_promo_redeemed_txt">Following product will be added to your order during checkout.</string>
    <string name="product_image">Product Image</string>
    <string name="add_to_shop">Add to Shopping List</string>
    <string name="discount">Discount</string>
    <string name="promo">Promo</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="addAll">Add all</string>
    <string name="saving">Savings:</string>
    <string name="regular_price">Regular Price</string>
    <string name="totalMrp">\u00A0|\u00A0Total: </string>
    <string name="current_pin">Your current Pin</string>
    <string name="update">Update</string>
    <string name="updateDialogTitle">Update BigBasket App</string>
    <string name="UPDATE">UPDATE</string>
    <string name="CANCEL">CANCEL</string>
    <string name="cancel">Cancel</string>
    <string name="pin_text_para1">Delivery Confirmation PIN is a 4 digit number. You can set this to a number of your choice. This PIN is required for acknowledgment of order delivery and to provide feedback for our service. We request you to not share the PIN with delivery person.</string>
    <string name="pin_text_para2">The PIN will also be sent to you, as part of ready to ship email or SMS for each order.</string>
    <string name="new_pin_hint">Please enter 4-digit PIN</string>
    <string name="placeorder">Place Order</string>
    <string name="reviewAndPlaceorder">Review &amp; Place Order</string>
    <string name="invoicenumber">Invoice No:</string>
    <string name="ordernumber">Order No:</string>
    <string name="amountpay">Amount to Pay</string>
    <string name="vat">VAT</string>
    <string name="type">Type</string>
    <string name="message">Message</string>
    <string name="orderSummaryDefaultMsg">Your order is not placed yet! Please review and then place order.</string>
    <string name="paymentGatewayRedirectMsg">Please note: You will be re-directed to the payment gateway, to complete the payment</string>
    <string name="txnFailedRetryTxt">Please choose a different payment method, or retry again!</string>
    <string name="ok">OK</string>
    <string name="yesTxt">Yes</string>
    <string name="noTxt">No</string>
    <string name="walletUsed">Used from wallet:</string>
    <string name="walletBal">Balance in wallet:</string>
    <string name="youSaved">You saved:</string>
    <string name="walletSummary">Wallet Summary</string>
    <string name="walletBalance">Current Balance</string>
    <string name="summary">Summary</string>
    <string name="items">Items</string>
    <string name="orderModification">Modifications</string>
    <string name="orderReview">Review Order</string>
    <string name="chooseSlot">Select Slot</string>
    <string name="createShoppingList">Create shopping List</string>
    <string name="shoppingListNameDialogTextHint">Enter shopping list name</string>
    <string name="chooseCity">Pick Your City</string>
    <string name="changeCityMenuTxt">Change city</string>
    <string name="outOfStock">Out of stock</string>
    <string name="orLoginUsingEmail">Or Login using E-mail</string>
    <string name="orSignupUsingEmail">Or Sign Up using E-mail</string>
    <string name="OR">OR</string>
    <string name="myAccount">My Account</string>
    <string name="signOut">Logout</string>
    <string name="signIn">Login</string>
    <string name="signoutConfirmation">Are you sure that you want to logout?</string>
    <string name="signUp">Sign Up</string>
    <string name="HNDetails">House No &amp; Details</string>
    <string name="addressNick">Address nickname (Optional)</string>
    <string name="contactFirstName">Contact first name</string>
    <string name="contactLastName">Contact last name</string>
    <string name="contactNum">Contact number</string>
    <string name="houseNum">House no</string>
    <string name="streetName">Street name</string>
    <string name="residentialComplex">Residential complex (Optional)</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="makeDefaultAddress">Make this my default address.</string>
    <string name="createList">Create list</string>
    <string name="isSystemShoppingListMsg">Lists created by BigBasket cannot be edited!They are system generated lists.</string>
    <string name="defaultAddress">Default Address</string>
    <string name="newTxt">New</string>
    <string name="one">1</string>
    <string name="ADD">ADD</string>
    <string name="UploadPrescription">UPLOAD PRESCRIPTION</string>
    <string name="imageMandatoryError">Prescription Image is mandatory!</string>
    <string name="imageUploading">Images loading....</string>
    <string name="patientName">Patient Name</string>
    <string name="doctorName">Doctor Name</string>
    <string name="prescriptionName">Prescription Name</string>
    <string name="dateCreatedList">Date Created:</string>
    <string name="patientNameList">Patient Name:</string>
    <string name="doctorNameList">Doctor Name:</string>
    <string name="prescriptionNameList">Prescription Name:</string>
    <string name="ruleTotalPrice">Total Price:</string>
    <string name="ruleTotal">Total</string>
    <string name="bbCommHub">Communication Hub</string>
    <string name="rating">Rating:</string>
    <string name="yourComments">Your comments (optional)</string>
    <string name="submit">Submit</string>
    <string name="konotorWelcomeMessage">Welcome to BigBasket communication hub. You can send us your feedback or report problems through communication hub, someone will respond to your query.</string>
    <string name="applyAllCaps">APPLY</string>
    <string name="apply">Apply</string>
    <string name="pleaseNote">Please Note:</string>
    <string name="shopFromOrder">Shop from this order</string>
    <string name="back">Go Back</string>
    <string name="background">Background</string>
    <string name="slot">Slots</string>
    <string name="whyUpdate">Why Update? - </string>
    <string name="appOutDatedMsg1">Please update BigBasket Mobile app to the latest version.</string>
    <string name="appOutDatedMsg2">To update, please touch UPDATE button.</string>
    <string name="appUpdatedMsg">A new version of App is available on Play Store, Please update to take advantage of latest features.</string>
    <string name="confirmMobileNumber">Confirm your mobile number</string>
    <string name="txtConfirm">CONFIRM</string>
    <string name="txtResendCodeStr">RESEND</string>
    <string name="headerMsgForMobileConfirm">Enter the OTP code that we send to your phone.</string>
    <string name="txtConfirmNumberHint">Enter code</string>
    <string name="contactNoMin10">Enter a valid 10 digit mobile number.</string>
    <string name="otpCodeErrorMsg">Confirmation code entered is not valid.</string>
    <string name="numberUsedByAnotherMember">This mobile number is already in use, please use another mobile number.</string>
    <string name="resendOtpMsg">Code has been resent</string>
    <string name="viewPrescriptionImages">View images</string>
    <string name="txtChoosePrescription">Choose prescription</string>
    <string name="uploadServiceForPrescriptionImage">Prescription Image Upload Service</string>
    <string name="viewBasket">View Basket</string>
    <string name="more">More</string>
    <string name="moreAllCaps">MORE</string>
    <string name="plusMore">&#43; More</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="delete_from_shop_lst">Delete from shopping list</string>
    <string name="additional_action">Additional action</string>
    <string name="please_wait">Please wait...</string>
    <string name="email">E-mail</string>
    <string name="emailNewPassword">Email new password</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="editPin">Edit</string>
    <string name="edit">Edit</string>
    <string name="remember">Remember Me</string>
    <string name="showPassword">Show Password</string>
    <string name="forgotPasswd">Forgot Password?</string>
    <string name="newPasswordSent">Your new password is emailed to you. Please check and login!</string>
    <string name="abortPayu">Are you sure, that you want to abort this transaction?</string>
    <string name="enterVoucher">Enter eVoucher code</string>
    <string name="shoppingListIsEmpty">Your shopping list is empty.</string>
    <string name="toAddProductsToList">To add products to the list.</string>
    <string name="searchForProducts">Search for products</string>
    <string name="fromSearchResults">From search result use</string>
    <string name="toAddToList">to add to the list</string>
    <string name="active_order_label">Active Orders</string>
    <string name="past_order_label">View Order History</string>
    <string name="update_my_profile">Update My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="wallet_activity">My Wallet</string>
    <string name="delivery_address">Delivery Addresses</string>
    <string name="view_edit_pin_label">Delivery Pin</string>
    <string name="empty_basket_txt1">There are no items in your basket.</string>
    <string name="empty_basket_txt2">Enjoy great shopping experience with us!</string>
    <string name="start_shopping_txt">START SHOPPING</string>
    <string name="applyVoucher">Apply Voucher</string>
</resources>