<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bb="http://schemas.android.com/apk/res-auto">

    <!-- Search / will display always -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="9999"
        android:title="@string/search"
        bb:actionLayout="@layout/uiv3_search_view"
        bb:actionViewClass="android.support.v7.widget.SearchView"
        bb:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_view_basket"
        android:icon="@drawable/view_basket"
        android:orderInCategory="9999"
        android:title="@string/viewBasket"
        bb:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/person_header"
        android:orderInCategory="9999"
        android:title="@string/myAccount"
        bb:showAsAction="ifRoom">
        <menu>

            <item
                android:id="@+id/action_communication_hub"
                android:icon="@drawable/b_logo_bubble"
                android:orderInCategory="9999"
                android:title="@string/bbCommHub"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_login"
                android:icon="@drawable/login_arrow"
                android:orderInCategory="9999"
                android:title="@string/action_sign_in"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_change_city"
                android:icon="@drawable/login_arrow"
                android:orderInCategory="9999"
                android:title="@string/changeCityMenuTxt"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_active_orders"
                android:icon="@drawable/active_orders"
                android:orderInCategory="9999"
                android:title="@string/active_order_label"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_order_history"
                android:icon="@drawable/history"
                android:orderInCategory="9999"
                android:title="@string/past_order_label"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_update_profile"
                android:icon="@drawable/user_modify"
                android:orderInCategory="9999"
                android:title="@string/update_my_profile"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_change_password"
                android:icon="@drawable/lock"
                android:orderInCategory="9999"
                android:title="@string/change_password"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_wallet_activity"
                android:icon="@drawable/safety_box"
                android:title="@string/wallet_activity"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_delivery_address"
                android:icon="@drawable/place_small"
                android:orderInCategory="9999"
                android:title="@string/delivery_address"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_change_pin"
                android:icon="@drawable/edit_large"
                android:orderInCategory="9999"
                android:title="@string/view_edit_pin_label"
                bb:showAsAction="never" />

            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/logout"
                android:orderInCategory="9999"
                android:title="@string/signOut"
                bb:showAsAction="never" />
        </menu>
    </item>

</menu>