<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_medium_large"
            android:text="@string/confirmMobileNumber"
            android:textSize="@dimen/large_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHeaderMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/headerMsgForMobileConfirm"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/primary_text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_mini">


                <TextView
                    android:id="@+id/txtResendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small"
                    android:text="@string/txtResendCodeStr"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/primary_text_size" />


                <EditText
                    android:id="@+id/editTextMobileCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/txtResendCode"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_toLeftOf="@id/txtResendCode"
                    android:hint="@string/txtConfirmNumberHint"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padding_mini"
                    android:paddingRight="@dimen/padding_mini"
                    android:textColor="@color/uiv3_primary_text_color" />


                <TextView
                    android:id="@+id/txtResendNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextMobileCode"
                    android:layout_marginLeft="@dimen/margin_mini"
                    android:gravity="left"
                    android:paddingTop="@dimen/padding_mini"
                    android:text="@string/resendOtpMsg"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/small_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtErrorValidateNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtResendNumber"
                    android:layout_marginLeft="@dimen/margin_mini"
                    android:gravity="center|left"
                    android:paddingTop="@dimen/padding_mini"
                    android:text="@string/otpCodeErrorMsg"
                    android:textColor="@color/promo_red_color"
                    android:textSize="@dimen/small_text_size"
                    android:visibility="gone" />

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:gravity="center|right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/CANCEL"
            android:textColor="@android:color/black"
            android:textSize="@dimen/primary_text_size" />

        <TextView
            android:id="@+id/txtConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/txtConfirm"
            android:textColor="@color/red_color"
            android:textSize="@dimen/primary_text_size" />
    </LinearLayout>


</LinearLayout>