<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <EditText
        android:id="@+id/editTextVoucherCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:hint="@string/enterVoucher"
        android:inputType="text"
        android:textColor="@color/uiv3_primary_text_color"
        android:textSize="@dimen/primary_text_size" />

    <TextView
        android:id="@+id/lblOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextVoucherCode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/OR"
        android:textColor="@color/uiv3_primary_text_color"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/btnApplyVoucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/applyVoucher"
        android:textColor="@color/uiv3_primary_text_color"
        android:textSize="@dimen/primary_text_size" />

    <ListView
        android:id="@+id/lstAvailableVouchers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnApplyVoucher"
        android:layout_below="@id/lblOr"
        android:choiceMode="singleChoice"
        android:listSelector="@color/uiv3_list_bkg_color" />
</RelativeLayout>