<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:id="@+id/imgEmptyPage"
        android:layout_marginTop="@dimen/margin_large"
        android:src="@drawable/empty_basket"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgEmptyPage"
        android:id="@+id/txtEmptyMsg1"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:textColor="@color/uiv3_secondary_text_color"
        android:text="@string/empty_basket_txt1"
        android:textSize="@dimen/primary_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmptyMsg1"
        android:id="@+id/txtEmptyMsg2"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:textColor="@color/uiv3_secondary_text_color"
        android:text="@string/empty_basket_txt2"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/btnBlankPage"
        style="@style/EmptyPageButtonStyle"
        android:layout_below="@id/txtEmptyMsg2"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/padding_small"
        android:paddingTop="@dimen/padding_small"
        android:text="@string/start_shopping_txt" />

</RelativeLayout>